--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -27,6 +27,7 @@
     --accent-color: #F72585;
     --foreground-color: #7209B7;
     --bg-color: #21202e;
+    --bg-color-lite: #34324f;
     --bg-color-transparent: #390ca349;
     --transparent: rgba(0, 0, 0, 0);
     --east-bay: #36517E;
